fixed soem spacing in service panel

--- a/angular_app_frontend/features/dashboard/service-panel/service-panel.scss
+++ b/angular_app_frontend/features/dashboard/service-panel/service-panel.scss
@@ -1,7 +1,5 @@
-.service-panel.ng-scope{
+.service-panel.ng-scope {
   @extend %side-panel;
-
-
 
   min-height: 100%;
   max-height: 100vh;
@@ -9,26 +7,26 @@
   -webkit-backdrop-filter: blur(9.9px);
   backdrop-filter: blur(9.9px);
   overflow-y: scroll;
-  .ss_service{
-    margin-bottom: 27px;
-    margin-top: 35px;
+  .ss_service {
+    margin-bottom: 10px;
+    margin-top: 10px;
   }
-  .ss_panel-body{
+  .ss_panel-body {
 
-    margin-bottom:5px;
-    margin-left:26px;
+    margin-bottom: 5px;
+    margin-left: 10px;
     margin-top: 55px;
   }
-  .ss_show{
+  .ss_show {
     border: 0;
     background-color: $dashboard-dark;
-    color:white;
+    color: white;
   }
-  .ss_show-list{
-    margin-bottom:0;
+  .ss_show-list {
+    margin-bottom: 0;
   }
 
-  .please-add-please{
+  .please-add-please {
     font-size: 24px;
     line-height: 1.3;
     color: $greyish-brown;
@@ -36,10 +34,11 @@
     margin-top: 130px;
   }
 }
+
 .service-header {
   @extend %ss-panel-header;
 }
 
 .row-buffer {
-  margin-bottom: 60px;
+  margin-bottom: 20px;
 }
