--- a/static/main.css
+++ b/static/main.css
@@ -3104,11 +3104,11 @@ footer a.pull-right {
   backdrop-filter: blur(9.9px);
   overflow-y: scroll; }
   .service-panel.ng-scope .ss_service {
-    margin-bottom: 27px;
-    margin-top: 35px; }
+    margin-bottom: 10px;
+    margin-top: 10px; }
   .service-panel.ng-scope .ss_panel-body {
     margin-bottom: 5px;
-    margin-left: 26px;
+    margin-left: 10px;
     margin-top: 55px; }
   .service-panel.ng-scope .ss_show {
     border: 0;
@@ -3124,7 +3124,7 @@ footer a.pull-right {
     margin-top: 130px; }
 
 .row-buffer {
-  margin-bottom: 60px; }
+  margin-bottom: 20px; }
 
 .placeholder {
   pointer-events: none;
